--- a/bookdown.tex
+++ b/bookdown.tex
@@ -1087,7 +1087,7 @@ Congratulations! You've made it to the end of your TechAcademy Data Science proj
 
 This checklist should help you keeping track of your exercises. Remember that you have to hand in satisfactory solutions to at least two thirds of the exercises. If you're part of the beginner track this refers to two thirds of part A (EDA) only. If you're part of the advanced track, you have to hand in at least two thirds of both individual parts A and B. Hence, you cannot hand in 100 percent of the first part and only 50 percent of the second one. You'll need more than 66\% in each one for a certificate. After all, you're not really that advanced if you only did half of it, right?
 
-\textbf{Part A: Exploratory Data Analysis (Beginner + Advanced)}
+\textbf{Part A: Exploratory Data Analysis (Beginners + Advanced)}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -1143,11 +1143,7 @@ This checklist should help you keeping track of your exercises. Remember that yo
   \end{enumerate}
 \end{enumerate}
 
-\textless\textless\textless\textless\textless\textless\textless{} HEAD
-\textbf{Part B: price prediction using statistical methods (advanced and motivated beginners)}
-=======
-** Part B: Price Prediction Using Statistical Methods (Advanced + Motivated Beginners)
-\textgreater\textgreater\textgreater\textgreater\textgreater\textgreater\textgreater{} a67f418d45a6224bb1aa661adba74749082bef5a
+\textbf{Part B: Price Prediction Using Statistical Methods ((motivated) Beginners + Advanced)}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
